--- a/src/stylesheets/css/index.css
+++ b/src/stylesheets/css/index.css
@@ -22,8 +22,58 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
-.App-header {
-  text-align: center;
+ul {
+  list-style-type: none;
+}
+
+.content {
+  display: flex;
+  padding: 1rem;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  flex: 1;
+}
+
+.header {
+  min-height: 8rem;
+  background-color: #00b5b5;
+  color: #FFFFFF;
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  flex-shrink: 1;
+}
+
+.logo {
+  justify-self: flex-start;
+  margin-left: 2rem;
+}
+
+.nav-list {
+  margin: 0 auto;
+}
+
+.nav-list a {
+  font-weight: bold;
+  padding: 2rem 4rem;
+  text-decoration: none;
+  color: #FFFFFF;
+}
+
+.nav-list a:hover, .nav-list a:focus {
+  border-bottom: 2px solid #22d88c;
 }
 
 /*# sourceMappingURL=index.css.map */
