--- a/src/stylesheets/scss/index.scss
+++ b/src/stylesheets/scss/index.scss
@@ -31,22 +31,12 @@ ul{
 
 .content{
   display: flex;
-  padding: 1rem;
-}
-
-.row {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: 100%;
-}
-
-.column {
-  display: flex;
-  flex-direction: column;
-  flex-basis: 100%;
-  flex: 1;
+  padding: 2rem;
+  min-height: 80vh;
 }
 
 
+
+@import 'helpers/helpers';
 @import 'components/Header';
+@import 'components/ListView';
