Adding GridList view

--- a/src/stylesheets/scss/components/_Header.scss
+++ b/src/stylesheets/scss/components/_Header.scss
@@ -1,7 +1,9 @@
 
 .header{
   min-height: 8rem;
-  background-color: #00b5b5;
+  //background-color: #00b5b5;
+
+  background-color: #00acc6;
   //background-image: linear-gradient(to bottom right, #5fbf44, #076d1a);
   color: #FFFFFF;
   display: flex;
