--- a/src/stylesheets/css/index.css
+++ b/src/stylesheets/css/index.css
@@ -80,7 +80,7 @@ ul {
 
 .header {
   min-height: 8rem;
-  background-color: #00b5b5;
+  background-color: #00acc6;
   color: #FFFFFF;
   display: flex;
   align-items: center;
@@ -109,8 +109,8 @@ ul {
   border-bottom: 2px solid #22d88c;
 }
 
-.list-view {
-  background-color: #00b5b5;
+.view {
+  background-color: #00acc6;
   padding: 2rem 0;
 }
 
@@ -168,9 +168,51 @@ ul {
   color: #003333;
 }
 
-.office-description h1, h2, h3, h4, h5 {
+.office-description > h1, h2, h3, h4, h5 {
   color: #FFFFFF;
   padding-bottom: 1rem;
+}
+
+.grid-view {
+  flex-wrap: wrap;
+}
+
+.margin-fix {
+  margin: 0 1rem;
+}
+
+.card {
+  border-radius: 6px;
+  flex: 0 1 calc(25% - 4rem);
+  box-shadow: 0 2px 2px rgba(204, 197, 185, 0.5);
+  background-color: #FFFFFF;
+  color: #252422;
+  min-height: 10rem;
+  padding: 1rem 1rem;
+  margin: 1rem 1rem;
+  text-align: justify;
+  font-family: "Muli", "Helvetica", Arial, sans-serif;
+}
+
+.card-image {
+  display: flex;
+  flex-basis: 8rem;
+}
+
+@media only screen and (max-width: 600px) {
+  .card {
+    flex: 0 1 calc(100% - 4rem);
+  }
+}
+@media only screen and (min-width: 600px) and (max-width: 767px) {
+  .card {
+    flex: 0 1 calc(50% - 4rem);
+  }
+}
+@media only screen and (min-width: 767px) and (max-width: 862px) and (orientation: landscape) {
+  .card {
+    flex: 0 1 calc(33% - 4rem);
+  }
 }
 
 /*# sourceMappingURL=index.css.map */
