--- a/src/stylesheets/css/index.css
+++ b/src/stylesheets/css/index.css
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-  background-color: #F3F3EE;
+  background-color: #FFFFFF;
   margin: 0;
   padding: 0;
   font-size: 14px;
@@ -26,10 +26,22 @@ ul {
   list-style-type: none;
 }
 
+@font-face {
+  font-family: "Simplifica";
+  src: url("../assets/SIMPLIFICATypeface.ttf") format("truetype");
+}
 .content {
   display: flex;
   padding: 2rem;
   min-height: 80vh;
+}
+
+.view {
+  background-color: #00acc6;
+  padding: 2rem 0;
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
 }
 
 .row {
@@ -81,6 +93,9 @@ ul {
 .header {
   min-height: 8rem;
   background-color: #00acc6;
+  -webkit-box-shadow: 0 2px 6px -3px rgba(0, 0, 0, 0.8);
+  -moz-box-shadow: 0 2px 6px -3px rgba(0, 0, 0, 0.8);
+  box-shadow: 0 2px 6px -3px rgba(0, 0, 0, 0.8);
   color: #FFFFFF;
   display: flex;
   align-items: center;
@@ -92,6 +107,12 @@ ul {
 .logo {
   justify-self: flex-start;
   margin-left: 2rem;
+  font-size: 1.8rem;
+}
+
+.logo a {
+  text-decoration: none;
+  color: #FFFFFF;
 }
 
 .nav-list {
@@ -100,22 +121,24 @@ ul {
 
 .nav-list a {
   font-weight: bold;
-  padding: 2rem 4rem;
+  padding: 2.5rem 4rem;
   text-decoration: none;
   color: #FFFFFF;
+  font-size: 1.8rem;
 }
 
 .nav-list a:hover, .nav-list a:focus {
-  border-bottom: 2px solid #22d88c;
+  border-bottom: 2px solid #27d1e8;
 }
 
-.view {
-  background-color: #00acc6;
-  padding: 2rem 0;
+@media only screen and (max-width: 320px) {
+  .nav-list a {
+    padding: 2.5rem 3rem;
+  }
 }
-
 .list-view-row {
-  margin-top: 1rem;
+  margin-top: 2rem;
+  align-items: center;
 }
 
 .image-column {
@@ -125,7 +148,8 @@ ul {
 }
 
 .description-column {
-  border-bottom: 1px solid #009999;
+  border-bottom: 1px solid rgba(0, 88, 113, 0.25);
+  margin-left: 1rem;
 }
 
 .loading-bar {
@@ -134,6 +158,7 @@ ul {
 }
 
 .image {
+  box-shadow: 0px 2px 6px -3px rgba(0, 0, 0, 0.8);
   display: inline-flex;
   width: 6rem;
   height: 6rem;
@@ -149,7 +174,7 @@ ul {
 
 .image span {
   font-weight: bold;
-  font-size: 1.8rem;
+  font-size: 2.5rem;
 }
 
 .image img {
@@ -165,14 +190,26 @@ ul {
   padding-bottom: 1rem;
   padding-right: 1.5rem;
   font-size: 1.6rem;
-  color: #003333;
+  color: #003c44;
 }
 
-.office-description > h1, h2, h3, h4, h5 {
+.office-name {
   color: #FFFFFF;
   padding-bottom: 1rem;
+  font-weight: lighter;
 }
 
+@media only screen and (max-width: 320px) {
+  .image-column {
+    display: none;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  .image {
+    width: 7rem;
+    height: 7rem;
+  }
+}
 .grid-view {
   flex-wrap: wrap;
 }
@@ -183,15 +220,14 @@ ul {
 
 .card {
   border-radius: 6px;
-  flex: 0 1 calc(25% - 4rem);
-  box-shadow: 0 2px 2px rgba(204, 197, 185, 0.5);
+  box-shadow: 0 2px 2px rgba(0, 65, 73, 0.5);
+  flex: 0 1 calc(25% - 8rem);
   background-color: #FFFFFF;
   color: #252422;
   min-height: 10rem;
-  padding: 1rem 1rem;
+  padding: 2rem 3rem;
   margin: 1rem 1rem;
   text-align: justify;
-  font-family: "Muli", "Helvetica", Arial, sans-serif;
 }
 
 .card-image {
@@ -199,19 +235,36 @@ ul {
   flex-basis: 8rem;
 }
 
+.card-title {
+  color: rgba(0, 0, 0, 0.8);
+  text-align: center;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.read-more-button {
+  color: #003c44;
+  font-weight: bold;
+}
+
+.read-more-button:hover {
+  opacity: 0.8;
+  cursor: pointer;
+}
+
 @media only screen and (max-width: 600px) {
   .card {
-    flex: 0 1 calc(100% - 4rem);
+    flex: 0 1 calc(100% - 8rem);
   }
 }
-@media only screen and (min-width: 600px) and (max-width: 767px) {
+@media only screen and (min-width: 601px) and (max-width: 767px) {
   .card {
-    flex: 0 1 calc(50% - 4rem);
+    flex: 0 1 calc(50% - 8rem);
   }
 }
-@media only screen and (min-width: 767px) and (max-width: 862px) and (orientation: landscape) {
+@media only screen and (min-width: 768px) and (max-width: 1440px) {
   .card {
-    flex: 0 1 calc(33% - 4rem);
+    flex: 0 1 calc(33.33% - 8rem);
   }
 }
 
